# snipe

./: .cliff.toml  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  Dockerfile  LICENSE  PRIVACY.md  README.md  compose.cloud.yml  compose.override.yml  compose.yml  install.sh  manage.sh  mkdocs.yml  pyproject.toml  streamlit_app.py
.forgejo/workflows/: ci.yml  mirror.yml  release.yml
.github/workflows/: ci.yml
api/: cloud_session.py  ebay_webhook.py  main.py
app/: app.py  tiers.py
app/db/: models.py  pg_shared.py  protocol.py  store.py
app/db/migrations/: 001_init.sql  002_add_listing_format.sql  002_background_tasks.sql  003_nullable_account_age.sql  004_staging_tracking.sql  005_listing_category.sql  006_scammer_blocklist.sql  007_background_tasks.sql  008_community_signals.sql  009_user_preferences.sql  010_corrections.sql  011_ebay_categories.sql  012_reported_sellers.sql  013_ebay_user_tokens.sql  014_saved_search_monitor.sql  015_active_monitors.sql
app/db/pg_migrations/: 001_shared_tables.sql
app/llm/: __init__.py  query_translator.py  router.py
app/mcp/: formatters.py  gpu_scoring.py  server.py
app/tasks/: monitor.py  runner.py  scheduler.py
app/trust/: __init__.py  aggregator.py  metadata.py  photo.py
app/ui/: Search.py
app/ui/components/: easter_eggs.py  filters.py  listing_row.py
app/wizard/: __init__.py  setup.py
config/: llm.cloud.yaml  llm.yaml.example
docker/web/: Dockerfile  nginx.cloud.conf  nginx.conf
docs/: index.md  nginx-self-hosted.conf
docs/getting-started/: ebay-api.md  installation.md  quick-start.md
docs/reference/: architecture.md  tier-system.md  trust-scoring.md
docs/user-guide/: blocklist.md  red-flags.md  searching.md  settings.md  trust-scores.md
scripts/: debug_fetch_fresh.py  probe_mercari.py
tests/: conftest.py  test_api_search_build.py  test_async_search.py  test_ebay_categories.py  test_feedback.py  test_preferences_currency.py  test_query_translator.py  test_search_cache.py  test_tiers.py
tests/db/: test_pg_shared.py  test_protocol.py  test_store.py
tests/test_tasks/: test_monitor.py  test_runner.py
tests/trust/: test_aggregator.py  test_metadata.py  test_photo.py
tests/ui/: test_easter_eggs.py  test_filters.py
web/: index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
web/src/: App.vue  main.ts  test-setup.ts
web/src/__tests__/: ListingView.test.ts  searchStore.test.ts  useCurrency.test.ts  useTheme.test.ts
web/src/assets/: theme.css
web/src/components/: AlertBell.vue  AppNav.vue  FeedbackButton.vue  LLMQueryPanel.vue  ListingCard.vue  SearchProgress.vue  TrustFeedbackButtons.vue
(+23 files in other folders)
