[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snipe"
version = "0.1.0"
description = "Auction listing monitor and trust scorer"
requires-python = ">=3.11"
dependencies = [
    "circuitforge-core>=0.7.0",
    "streamlit>=1.32",
    "requests>=2.31",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "cryptography>=42.0",
    "PyJWT>=2.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
